@@ -356,7 +356,7 @@ int dataset_stack_variables (const char *vname, const char *line,
 			     double ***pZ, DATAINFO *pdinfo, 
 			     PRN *prn);
 
-int dataset_sort_by (int v, double **Z, DATAINFO *pdinfo, gretlopt opt);
+int dataset_sort_by (const int *list, double **Z, DATAINFO *pdinfo, gretlopt opt);
 
 int is_log_variable (int i, const DATAINFO *pdinfo, char *parent);
 
